# GUI_bypassing_prohibitions

./: Cargo.toml  LICENSE  README.md
src/: help.txt  main.rs  manager.rs  merge_sort.rs  work_file_config.rs
src/core/lists/: list-general.txt
ui/: app-window.slint  help.slint  theme.slint  window-up-read-config-all.slint
wix/: main.wxs
