[package]
name = "GUI_bypassing_prohibitions"
version = "0.1.0"
authors = ["Олег olezha155@gmail.com"]
description = "Программа для обхода не желательных юлокировок"
homepage =  "https://github.com/olezha155/GUI_bypassing_prohibitions"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"

winapi = { version = "0.3", features = ["shellapi", "processthreadsapi", "securitybaseapi", "winuser", "handleapi", "winnt"] }
reqwest = { version = "0.13.2", features = ["blocking"] }

tray-icon = "0.14"
crossbeam-channel = "0.5"
windows = "0.62.2"

serde = { version = "1.0", features = ["derive"] }
confy = "0.6"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wix]
eula = false
